# RustLibraries

./: .gitignore  Cargo.toml  README.md  TODO.md
benchmark-results/: array-api-tests-bitwise-family-probe.json  array-api-tests-bitwise-family-probe.md  array-api-tests-broadcast-probe.json  array-api-tests-broadcast-probe.md  array-api-tests-cos-debug.json  array-api-tests-cos-debug.md  array-api-tests-creation-dtype-probe.json  array-api-tests-creation-dtype-probe.md  array-api-tests-creation-probe.json  array-api-tests-creation-probe.md  array-api-tests-dlpack-hasnames-probe.json  array-api-tests-dlpack-hasnames-probe.md  array-api-tests-elementwise-floor-log-probe.json  array-api-tests-elementwise-floor-log-probe.md  array-api-tests-elementwise-next-probe.json  array-api-tests-elementwise-next-probe.md  array-api-tests-elementwise-pow-round-probe.json  array-api-tests-elementwise-pow-round-probe.md  array-api-tests-elementwise-sign-tail-probe.json  array-api-tests-elementwise-sign-tail-probe.md  array-api-tests-fft-probe.json  array-api-tests-fft-probe.md  array-api-tests-focused-probe.json  array-api-tests-focused-probe.md  array-api-tests-full-maxfail.json  array-api-tests-full-maxfail.md  (+78 more)
crates/numrs-core/: Cargo.toml
crates/numrs-core/examples/: basic.rs  bench_json.rs  external_cases_json.rs  microbench.rs  parity_json.rs
crates/numrs-core/src/: array.rs  blas.rs  dtype.rs  error.rs  indexing.rs  layout.rs  lib.rs  ops.rs  shape.rs
crates/numrs-core/tests/: numrs_core.rs
crates/numrust-python/: Cargo.toml
crates/numrust-python/src/: lib.rs
(+78 files in other folders)
