[workspace]
members = [
    "crates/numrs-core",
    "crates/statsrust",
    "crates/scirust",
    "crates/rigortrail",
    "crates/numrust-python",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AdityaVG13/RustLibraries"
rust-version = "1.80"
