[package]
name = "numrust-python"
version = "0.1.0"
description = "Python Array API namespace bridge for numrs-core."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "_numrust"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
numrs-core = { path = "../numrs-core" }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
rustfft = "6"
